@@ -1,3 +1,10 @@
+2003-03-19  Martin Schaffner <maschaffner@gmx.ch>
+
+	* 2d/rle.c, include/gr.h, include/rle.h, main/bm.c, main/bm.h,
+	main/gamemine.c, main/gamemine.h, main/gameseq.c, main/piggy.c,
+	main/piggy.h: if descent.pig available, load d1 textures for d1
+	levels
+
 2003-03-19  Bradley Bell  <btb@icculus.org>
 
 	* 2d/font.c, 2d/palette.c, 3d/interp.c, 3d/setup.c,
